; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_trap.c_user_page_fault_continue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_trap.c_user_page_fault_continue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i64 }

@EXC_BAD_ACCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @user_page_fault_continue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @user_page_fault_continue(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %2, align 4
  %7 = call i32 (...) @current_thread()
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @thread_is_64bit_addr(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call %struct.TYPE_5__* @USER_REGS64(i32 %12)
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %5, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %4, align 8
  br label %23

17:                                               ; preds = %1
  %18 = load i32, i32* %3, align 4
  %19 = call %struct.TYPE_6__* @USER_REGS32(i32 %18)
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %6, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %4, align 8
  br label %23

23:                                               ; preds = %17, %11
  %24 = load i32, i32* %3, align 4
  %25 = load i64, i64* %4, align 8
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @pal_dbg_page_fault(i32 %24, i64 %25, i32 %26)
  %28 = load i32, i32* @EXC_BAD_ACCESS, align 4
  %29 = load i32, i32* %2, align 4
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @i386_exception(i32 %28, i32 %29, i64 %30)
  ret void
}

declare dso_local i32 @current_thread(...) #1

declare dso_local i64 @thread_is_64bit_addr(i32) #1

declare dso_local %struct.TYPE_5__* @USER_REGS64(i32) #1

declare dso_local %struct.TYPE_6__* @USER_REGS32(i32) #1

declare dso_local i32 @pal_dbg_page_fault(i32, i64, i32) #1

declare dso_local i32 @i386_exception(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
